...

import androidx.sqlite.db.SupportSQLiteDatabase
import com.dbworkout.model.ExerciseCategory

internal object SeedExercises {
    private val exercises = listOf(
        ExerciseCategory.BACK to "Подтягивания прямым хватом",
        ExerciseCategory.BACK to "Подтягивания обратным хватом",
        ExerciseCategory.BACK to "Подтягивания широким хватом",
        ExerciseCategory.BACK to "Подтягивания узким хватом",
        ExerciseCategory.BACK to "Негативные подтягивания",
        ExerciseCategory.BACK to "Австралийские подтягивания",
        ExerciseCategory.CHEST to "Классические отжимания",
        ExerciseCategory.CHEST to "Отжимания широким хватом",
        ExerciseCategory.CHEST to "Отжимания узким хватом",
        ExerciseCategory.CHEST to "Алмазные отжимания",
        ExerciseCategory.CHEST to "Отжимания с ногами на возвышенности",
        ExerciseCategory.CHEST to "Отжимания с руками на возвышенности",
        ExerciseCategory.CHEST to "Взрывные отжимания",
...
